--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,21 @@
 .App {
+  font-weight:bold;
+  border: 2px solid black;
   text-align: center;
+  background: #f5f5f5;
+  color: #333;
+  margin: 29px;
+  padding: 26px;
 }
+
+.App2 {
+  border: 0.5px solid black;
+  text-align: left;
+  color: #333;
+  margin: 29px;
+  padding: 26px;
+}
+
 
 .App-logo {
   height: 40vmin;
